Several examples in qt3d crash in assert: ASSERT: "node->id() == clonedNode->id()" in file nodes\qnode.cpp, line 617.
This happens because the QSceneLoader is missing the call to QComponent::copy in it's copy method implementation.
Reproducible in assimp, multiviewport, playground and gltf examples.