Add QComponent::copy call to QSceneLoader::copy

Fix assert in QNode, which is caused by the QSceneLoader::copy missing
a call to QComponent::copy.

Task-number: QTBUG-52395
Change-Id: I059971da68e7fdf4abf9455e76f00876804a7bd2
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>