src/render/io/qsceneloader.cpp
@@ -105,6 +105,7 @@ void QSceneLoader::sceneChangeEvent(const Qt3DCore::QSceneChangePtr &change)
 
 void QSceneLoader::copy(const QNode *ref)
 {
+    Qt3DCore::QComponent::copy(ref);
     const QSceneLoader *s = static_cast<const QSceneLoader*>(ref);
     d_func()->m_source = s->d_func()->m_source;
 }
